--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -3,7 +3,7 @@
 		<div role="alert" *ngIf="formTodo.submitted && !formTodo.hasValid">Invalid!</div>
 		<label>
 			<span class="blind">Add an item</span>
-			<input type="text" [(ngModel)]="model.title" name="title" placeholder="Add an task..." required>
+			<input type="text" [(ngModel)]="model.Title" name="Title" placeholder="Add an task..." required>
 		</label>
 		<button type="submit" aria-label="Submit" [disabled]="formTodo.loading">
 			<span *ngIf="!formTodo.loading">Submit</span>
@@ -16,9 +16,9 @@
 <ul>
 	<li *ngFor="let todo of todoes">
 		<label>
-			<input type="checkbox" aria-label="Mark as complete" title="Mark as complete" [(ngModel)]="todo.completed" [checked]="todo.completed" (change)="completeTodo(todo)">
-			<span *ngIf="!todo.completed">{{todo.title}}</span>
-			<del *ngIf="todo.completed">{{todo.title}}</del>
+			<input type="checkbox" aria-label="Mark as complete" title="Mark as complete" [(ngModel)]="todo.Completed" [checked]="todo.Completed" (change)="completeTodo(todo)">
+			<span *ngIf="!todo.Completed">{{todo.Title}}</span>
+			<del *ngIf="todo.Completed">{{todo.Title}}</del>
 		</label>
 		<button type="button" (click)="removeTodo(todo)" title="Task to delete">Delete</button>
 	</li>
