--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="~/Content/style.css">
 	<meta name="format-detection" content="address=no">
+	<script src="~/Scripts/jquery-3.1.1.slim.min.js"></script>
 	<!-- Polyfill(s) for older browsers -->
 	<script src="node_modules/core-js/client/shim.min.js"></script>
 	<script src="node_modules/zone.js/dist/zone.js"></script>
